fix on mobile folder block

--- a/app/sass/blocks/choose-folder.sass
+++ b/app/sass/blocks/choose-folder.sass
@@ -48,13 +48,16 @@
 			width: 100%
 			padding: 0 0 0 0
 			text-align: center
-			display: flex
-			flex-direction: column
+			flex-wrap: wrap
 			align-items: center
 		.choose-folder__img
 			display: none
 			@include mq($max-width: 575px)
 				display: block
+				margin: 0 auto
+	.blocks
+		display: flex
+		flex-wrap: wrap
 	&-block
 		display: flex
 		flex-wrap: wrap
@@ -62,7 +65,22 @@
 		margin: 30px 0
 		@include mq($max-width: 575px)
 			margin: 10px 0
+			width: 48%
 			flex-direction: column
+			&:last-child
+				order: -1
+			&:nth-child(2)
+				width: 100%
+				display: flex
+				flex-direction: row
+				flex-wrap: wrap
+				.colors-block
+					width: 48%
+		@include mq($max-width: 370px)
+			&:first-child
+				width: 100%
+			&:last-child
+				width: 100%
 		p
 			font: 500 17px 'Inter', sans-serif
 			margin-right: 50px
@@ -235,6 +253,11 @@
 			padding-left: 30px
 			@include mq($max-width: 800px)
 				margin-top: 0
+			@include mq($max-width: 575px)
+				padding-left: 45px
+			@include mq($max-width: 370px)
+				padding-left: 30px
+				width: auto
 	.btns
 		@include mq($max-width: 575px)
 			margin-top: 30px
